[gd_scene load_steps=2 format=3 uid="uid://dk2n7os188shm"]

[ext_resource type="Script" uid="uid://db48dfpwhrx77" path="res://scripts/windows/base/base_window.gd" id="1_onvrl"]

[node name="BaseWindow" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_onvrl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleBar" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Content" type="Control" parent="VBoxContainer/TitleBar"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleBar/Content"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="TextureButton" parent="VBoxContainer/TitleBar/Content"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2

[node name="ContentContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ButtonsBar" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
